--- a/style.css
+++ b/style.css
@@ -103,23 +103,29 @@ section{
 .contacts{
     display: flex;
     justify-content: center;
-
 }
+
 .contacts>div{
     background-color: rgba(0, 0, 0, 0.568);
     color: gold;
     border-radius: 50%;
     margin: 15px;
-    transition: 0.8s;
- 
-    
+    transition: 0.8s; 
 }
 .contacts>div>a{
     padding: 5px;
 }
+
+.contacts>div>.i>i{
+    padding: 10px;
+    font-size: 16px;
+    color: rgb(151, 151, 151);
+  
+}
 .contacts>div>a>i{
     padding: 10px;
     font-size: 20px;
+    color: rgba(0, 0, 0, 0.658);
 }
 .contacts>div:hover{
     background-color: gold;
