--- a/style.css
+++ b/style.css
@@ -105,38 +105,35 @@ section{
 .smart{
     color: black;
 }
+
 .contacts{
+    width: 100%;
+}
+.git, .tel-mail{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
 }
-
-.contacts>div{
-    background-color: rgba(0, 0, 0, 0.568);
-    color: gold;
+.git>div, .tel-mail>div{
+    background-color: rgba(255, 217, 0, 0.158);
     border-radius: 50%;
-    margin: 15px;
-    transition: 0.8s; 
+    margin: 8px;
+    border: 0.5px solid black;
+    transition: 1s;
 }
-.contacts>div>a{
-    padding: 5px;
+.tel-mail>div:hover{
+    transform: scale(1.2);
+}
+.git>div:hover{
+    transform: scale(1.2);
+}
+.git-big{
+    color: rgb(63, 58, 58);
 }
 
-.contacts>div>.i>i{
-    padding: 10px;
-    font-size: 16px;
-    color: rgb(151, 151, 151);
-  
-}
-.contacts>div>a>i{
-    padding: 10px;
+i{
+    padding: 20px;
     font-size: 20px;
-    color: rgba(0, 0, 0, 0.795);
-}
-.contacts>div:hover{
-    background-color: rgba(180, 178, 166, 0.26);
-    color: #000;
-    transform: scale(1.5);
+    color: rgba(0, 0, 0, 1);
 }
 @media screen and ( max-width:1100px) {
     .foto{
